# projects-300-P009

./: README.md  aws-cli-task-generator.skill  rca-summary-writer.skill  sla-breach-predictor.skill
.claude/agents/: fastapi-backend-builder.md
.claude/skills/: support-metrics-narrator.skill  terraform-production-reviewer.skill
.claude/skills/aws-cli-task-generator/: SKILL.md
.claude/skills/executive-incident-reporter/: SKILL.md  executive-incident-reporter.skill
project-1/: README.md
project1-old/: DELIVERY-SUMMARY.md  QUICK-REFERENCE.md  README.md  SKILL-USAGE.md
project1-old/sample-terraform/: main.tf
spec-test/: .gitignore  README.md  design-skills-subagents-with-PQP.md  mypy.ini  pyproject.toml  readme.md
spec-test/.claude/subagents/: cli-calculator-logic-designer.subagent.md
spec-test/.specify/memory/: constitution.md
spec-test/history/prompts/001-cli-calculator/: 002-create-cli-calculator-specification.spec.prompt.md  003-create-implementation-plan.plan.prompt.md  004-generate-implementation-tasks.tasks.prompt.md  005-complete-cli-calculator-implementation.green.prompt.md  005-implement-phase1-phase2.green.prompt.md
spec-test/history/prompts/constitution/: 001-initialize-python-calculator-constitution.constitution.prompt.md
spec-test/src/calculator/: __init__.py  __main__.py  cli.py  exceptions.py  operations.py  parser.py
spec-test/tests/integration/: test_cli.py
spec-test/tests/unit/: test_exceptions.py  test_operations.py  test_parser.py
specs/001-cli-calculator/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
(+58 files in other folders)
